# openzeppelin-inspector

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  inspector.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: black.yml  release.yml  run-tests.yml
docs/: development_environment.md  installation.md  scanners_available.md  test-suite.md
docs/scanner_integration/: overview.md  response_format.md  template-rule-metadata.yml  templates.md
src/: inspector_cli.py
src/inspector/: constants.py  helpers.py  main.py  response_expander.py  response_finalizer.py  scan_executor.py  scanner_manager.py  scanner_registry.py  setup_logging.py  source_code_manager.py
src/inspector/cli/: argument_handler.py  parsers.py  utils.py
src/inspector/cli/capabilities/: __init__.py  auto_completion.py  exceptions.py  helpers.py  install.py  scanners.py  scanners_executable.py  scanners_installable.py  scanners_python.py
src/inspector/composer/: __init__.py  composed_finding.py  composer.py
src/inspector/detector_tester/: __init__.py  test_file_manager.py  test_runner.py
src/inspector/models/: __init__.py  issue_template.py  metadata_models.py
src/inspector/models/_complete/: detector_response.py  extra.py  finding.py  instance.py  location.py  scanner_response.py  severities.py
src/inspector/models/minimal/: __init__.py  detector_response.py  error.py  extra.py  finding.py  instance.py  scanner_response.py
src/inspector/scanners/: __init__.py  base_scanner.py  types.py
tests/: context.py  test_argument_handler.py  test_cli.py  test_complete_models.py  test_composed_finding.py  test_helpers.py  test_minimal_models.py  test_models.py  test_scanner_manager.py  test_scanner_registry.py  test_test_runner.py
tests/utils/files/: NoIssues.sol  test.scope
tests/utils/mock_executable_scanner/: mock_scanner.py  test_contract.sol
tests/utils/mock_scanner/: pyproject.toml
tests/utils/mock_scanner/src/mock_scanner/: __init__.py  constants.py  main.py
tests/utils/mock_scanner/src/mock_scanner/detector_tests/mock-test/legacy/: mock-test.sol
